--- a/templates/jm_index.html
+++ b/templates/jm_index.html
@@ -16,7 +16,7 @@
     <!--구글 폰트 -->
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <!--css 링크-->
-    <link href="{{url_for('static', filename='jm_style.css')}}" type="text/css" rel="stylesheet">
+    <link href="../static/jm_style.css" type="text/css" rel="stylesheet">
 
 
 </head>
