--- a/templates/jm_index.html
+++ b/templates/jm_index.html
@@ -91,6 +91,6 @@
         </div>
     </section>
 </div>
-<script type="text/javascript" src="{{url_for('static', filename='jm_main.js')}}"></script>
+<script type="text/javascript" src="../static/jm_main.js"></script>
 </body>
 </html>
