update icon-guestbook's href

--- a/templates/bolee_aboutpage.html
+++ b/templates/bolee_aboutpage.html
@@ -329,7 +329,7 @@
         </h2>
         <h1 class="page7-head">데브아티스트 보리</h1>
         <span class="icon-all">
-        <a href="about-bolee3.html"><img src="https://cdn-icons-png.flaticon.com/512/7660/7660687.png"
+        <a href="bolee_aboutpage.html"><img src="https://cdn-icons-png.flaticon.com/512/7660/7660687.png"
                                          class="icon-guestbook"/></a>
         <a href="https://github.com/boleesystem"><img src="https://cdn-icons-png.flaticon.com/512/1051/1051377.png"
                                                       class="icon-github"/></a>
