jm first update

--- a/templates/jm_index.html
+++ b/templates/jm_index.html
@@ -85,7 +85,7 @@
                       style="height: 100px"></textarea>
                 <label for="floatingTextarea2">내용</label>
             </div>
-            <button onclick="save_jungmin()" type="button" class="btn btn-dark">댓글 남기기</button>
+            <button onclick="save_comment()" type="button" class="btn btn-dark">댓글 남기기</button>
         </div>
         <div class="mycards" id="comment-list">
         </div>
