sy first update

--- a/templates/sy_index.html
+++ b/templates/sy_index.html
@@ -189,7 +189,7 @@
         <div class="mybox">
             <div class="mybucket">
                 <input id="bucket" class="form-control" type="text" placeholder="나의 목표는 이것입니다.">
-                <button onclick="save_bucket()" type="button" class="btn btn-outline-secondary">기록하기</button>
+                <button onclick="save_sy()" type="button" class="btn btn-outline-secondary">기록하기</button>
             </div>
         </div>
         <div class="mybox" id="bucket-list">
