--- a/templates/dongkyu_index.html
+++ b/templates/dongkyu_index.html
@@ -185,7 +185,7 @@
                                 <p class="card-text" style="font-size: 21px;">보령시에 거주하고 있는 전 직업군인</p>
                 <p1 class="card-text" style="font-size: 27px; color: black; solid-color: black; ">장 . 동 . 규</p1>
                 <p></p>
-                <a href="dongkyu_page.html" class="btn btn-primary" style="font-size: 40px;">Detail</a>
+                <a href=/dongkyu_page class="btn btn-primary" style="font-size: 40px;">Detail</a>
             </div>
             <div class="box2">
                 <p class="card-text" style="font-size: 60px; color: black; solid-color: black; ">버 킷 리 스 트</p>
@@ -193,7 +193,7 @@
                 <p></p>
                 <p></p>
 
-                <a href="dongkyu_bucket.html" class="btn btn-primary" style="font-size: 40px;">Detail</a>
+                <a href=/dongkyu_bucket class="btn btn-primary" style="font-size: 40px;">Detail</a>
             </div>
             <div class="box3">
                 <img src="..." class="card-img-top" alt="...">
@@ -201,7 +201,7 @@
                 <p></p>
                 <p></p>
                 <p></p>
-                <a href="dongkyu_guestbook.html" class="btn btn-primary" style="font-size: 40px;">Detail</a>
+                <a href=/dongkyu_guestbook class="btn btn-primary" style="font-size: 40px;">Detail</a>
             </div>
 
     </div>
